nivasa-macros/tests/trybuild/scxml_handler_empty_statechart.rs
use nivasa_macros::scxml_handler;

#[scxml_handler(statechart = "", state = "guard_chain")]
fn handler() {}

fn main() {}
